# iqdb-index

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
dev/: DIRECTIVES.md  ROADMAP.md
docs/: API.md
docs/release/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v1.0.0.md
examples/: batch_and_stats.rs  custom_index.rs  dot_product_ordering.rs  polymorphic_engine.rs
src/: index.rs  lib.rs  stats.rs
tests/: consumer_simulation.rs  edge_cases.rs  properties.rs  stats_extra_none.rs  trait_shape.rs
tests/common/: mod.rs
