# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-index"
version = "0.1.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "The Index trait unifying flat, HNSW, and IVF vector indexes - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "vector-database",
    "index",
    "trait",
    "nearest-neighbor",
    "iqdb"
]

# Categories
categories = [
    "data-structures",
    "database-implementations"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-index"
repository    = "https://github.com/jamesgober/iqdb-index"
documentation = "https://docs.rs/iqdb-index"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_index"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Standard library.
std = []
# Serialization support.
serde = ["dep:serde"]


# DEPENDENCIES
# #################################
[dependencies]
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
proptest = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
