# ██████╗ ███████╗██████╗ ███████╗
# ██╔══██╗██╔════╝██╔══██╗██╔════╝
# ██████╔╝█████╗  ██████╔╝███████╗
# ██╔══██╗██╔══╝  ██╔═══╝ ╚════██║
# ██║  ██║███████╗██║     ███████║
# ╚═╝  ╚═╝╚══════╝╚═╝     ╚══════╝
#╔═══════════════════════════════╗
#║ Rust Efficiency & Performance ║
#╚═══════════════════════════════╝
[package]
name    = "iqdb-index"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.87"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "The Index trait unifying flat, HNSW, and IVF vector indexes - part of the iQDB family."

# Keywords (5 max)
keywords = [
    "vector-database",
    "index",
    "trait",
    "nearest-neighbor",
    "iqdb"
]

# Categories
categories = [
    "data-structures",
    "database-implementations"
]

# Links
homepage      = "https://github.com/jamesgober/iqdb-index"
repository    = "https://github.com/jamesgober/iqdb-index"
documentation = "https://docs.rs/iqdb-index"

# Authors
authors = [
    "James Gober <me@jamesgober.com>",
    "Matt Callahan <matthewcallahan01@icloud.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "iqdb_index"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
# Default build: the pure trait surface, std-only, no optional dependencies.
default = []


# DEPENDENCIES
# #################################
[dependencies]
# The shared iQDB vocabulary: VectorId, Metadata, Hit, SearchParams, DistanceMetric,
# and the IqdbError domain error. This is the crate's only dependency.
iqdb-types = { path = "../iqdb-types", version = "1.0.0" }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
# Property-based coverage of the trait contracts (deletion visibility, best-first
# ordering, and the batch-equals-loop equivalence) per dev/DIRECTIVES.md §5/§8.
proptest = "1"


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
